fixed the dark mode selection color

--- a/apps/docs/app/tokens.css
+++ b/apps/docs/app/tokens.css
@@ -113,7 +113,7 @@
     --hd-color-white-surface: var(--hd-neutral-800);
     --hd-color-neutral-surface: var(--hd-neutral-900);
     --hd-color-neutral-surface-weak: var(--hd-neutral-800);
-    --hd-color-surface-neutral-selection: var(--hd-neutral-300);
+    --hd-color-surface-neutral-selection: var(--hd-neutral-700);
     --hd-color-surface-code-selection: #405675;
     --hd-color-neutral-text: var(--hd-neutral-0);
     --hd-color-neutral-text-strong: var(--hd-neutral-900);
